--- a/styles.scss
+++ b/styles.scss
@@ -174,6 +174,20 @@ main {
   justify-content: center;
   flex-direction: column;
 
+  .emptyTodoList {
+    padding: 10px;
+    text-align: center;
+
+    h4 {
+      font-weight: 600;
+      font-size: 25px;
+    }
+    span {
+      color: #303540;
+      font-size: 14px;
+    }
+  }
+
   .todoContainer {
     display: block;
     background: $sec-color;
