Mark as done option added and delete function done

--- a/styles.css
+++ b/styles.css
@@ -181,8 +181,8 @@ main .todoContainer .todoList {
   position: relative;
 }
 main .todoContainer .todoList .isDone p {
+  opacity: 0.6;
   text-decoration: line-through;
-  color: #999a9a;
 }
 main .todoContainer .todoList .todo {
   line-height: 18px;
