--- a/styles.scss
+++ b/styles.scss
@@ -208,8 +208,8 @@ main {
 
       .isDone {
         p {
+          opacity: 0.6;
           text-decoration: line-through;
-          color: #999a9a;
         }
       }
 
